# Beethoven-Runtime

./: .gitmodules  CMakeLists.txt  Makefile  cmd_server.cc  cmd_server.h  data_server.cc  data_server.h  ddr_macros.h  fpga_utils.cc  fpga_utils.h  main.cc  response_poller.cc  response_poller.h  verilator.cc  verilator.h
aws-setup/: CMakeLists.txt
aws-setup/include/: fpga_utils.h
custom_dram_configs/: DDR4_8Gb_x16_3200.ini  hyperram.ini
include/: cmd_server.h  data_server.h  ddr_macros.h  fpga_utils.h  mmio.h  response_poller.h  util.h  verilator.h
include/sim/: DataWrapper.h  ddr_macros.h  front_bus_ctrl.h  front_bus_ctrl_axi.h  front_bus_ctrl_uart.h  mem_ctrl.h  verilator.h
include/sim/axi/: address_channel.h  data_channel.h  response_channel.h  state_machine.h  vcs_handle.h  vpi_handle.h
include/sim/chipkit/: state_machine.h
include/trace/: trace_read.h
scripts/: setup_kria.sh  vcs_build.sh
src/: cmd_server.cc  data_server.cc  dma_sim_test.cc  fpga_main.cc  fpga_utils.c  fpga_utils.cc  mmio.cc  mmio.h  response_poller.cc  verilator.cc  xsim_sanity.cc  xsim_vector_sanity.cc
src/sim/: front_bus_ctrl.cc  front_bus_ctrl_axi.cc  front_bus_ctrl_chipkit.cc  front_bus_ctrl_uart.cc  mem_ctrl.cc  tick.cc  verilator.cc  verilator_axi_frontend.cc  verilator_chipkit_frontend.cc  verilator_uart_frontend.cc
src/sim/axi/: front_bus_ctrl_axi.cc  state_machine.cc  vcs_axi_frontend.cc  verilator_axi_frontend.cc  vpi_axi_frontend.cc
src/sim/chipkit/: front_bus_ctrl_chipkit.cc  vcs_chipkit_frontend.cc  verilator_chipkit_frontend.cc
src/trace/: trace_read.cc
tests/: CMakeLists.txt  alloc_test.cc  memcpy.cc
